# rust-web-course-study-with-yangxu

./: .gitignore  README.md
002/s1/: Cargo.toml
002/s1/http/src/: httprequest.rs  httpresponse.rs
002/s1/httpserver/public/: 404.html  health.html  index.html  styles.css
002/s1/httpserver/src/: handler.rs  router.rs  server.rs
002/s1/tcpclient/src/: main.rs
002/s1/tcpserver/src/: main.rs
007/ws/: Cargo.toml  db.sql
007/ws/webservice/: Cargo.toml
007/ws/webservice/src/: routers.rs
007/ws/webservice/src/handlers/: course.rs
011/db/: .env  Cargo.toml
011/db/src/: main.rs
017/ws/webservice/src/: errors.rs  routers.rs  state.rs
017/ws/webservice/src/handlers/: general.rs  teacher.rs
018/ws/: db.sql
018/ws/webapp/src/: models.rs
018/ws/webapp/static/: teachers.html
018/ws/webservice/: Cargo.toml
019/wasm-game-of-life/pkg/: wasm_game_of_life.d.ts  wasm_game_of_life_bg.js
019/wasm-game-of-life/www/: package.json
019/ws/: Cargo.toml
019/ws/wasm-client/: Cargo.toml  LICENSE_MIT
019/ws/wasm-client/src/: errors.rs
019/ws/webapp/: Cargo.toml
019/ws/webapp/src/: handlers.rs  routers.rs
019/ws/webapp/static/: register.html
019/ws/webservice/src/: routers.rs
020/wasm-game-of-life/: Cargo.toml
020/wasm-game-of-life/pkg/: package.json  wasm_game_of_life.js  wasm_game_of_life_bg.wasm
020/wasm-game-of-life/src/: lib.rs
020/wasm-game-of-life/www/: index.js  package-lock.json
020/ws/wasm-client/src/: lib.rs
020/ws/webapp/src/: errors.rs  handlers.rs
020/ws/webservice/: Cargo.toml
020/ws/webservice/src/models/: course.rs
(+4 files in other folders)
